--- a/apiProjeto/src/main/resources/application.properties
+++ b/apiProjeto/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=apiProjeto
 #conexao com banco de dados atraves do phpmyadmin
 spring.datasource.url=jdbc:mysql://localhost:3306/GerenciadorDeLivros?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=""
+spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
